# not-redis

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: app.rs  commands.rs  data.rs  errors.rs  lib.rs  main.rs  request.rs  server.rs  stream.rs  telemetry.rs  transmission.rs  utils.rs
src/data/: mod.rs  rdb.rs  read.rs
src/encoding/: array.rs  integer.rs  mod.rs  rdb.rs  strings.rs
test/: dump_3.rdb
test_data/: dump_1.rdb  dump_2.rdb
tests/: config.rs  echo.rs  get_set.rs  info.rs  ping.rs  replication.rs  streams.rs  type.rs
tests/common/: app.rs  message.rs  mod.rs
