[package]
name = "not-redis"
version = "0.1.0"
authors = ["Ben Horowitz <benyakir.horowitz@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
anyhow = "1.0.59"
bytes = "1.3.0"
thiserror = "1.0.32"
rand = "0.8.5"
hex = "0.4.3"
sha1 = "0.10.6"
lzf = "1.0.0"
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
tracing-log = "0.2.0"


[dependencies.tokio]
version = "1.23.0"
features = ["sync", "net", "rt-multi-thread", "time", "macros", "io-util"]
default-features = false

[dev-dependencies]
once_cell = "1"
rand = "0.8.5"

[dev-dependencies.reqwest]
version = "0.12.4"
features = ["http2", "default-tls"]
default-features = false
